force-app/main/default/objects/acn_ttn__CustomMetaDataTransaction__c/acn_ttn__CustomMetaDataTransaction__c.object-meta.xml
<CustomObject>
    <label>CustomMetaDataTransaction</label>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>CustomMetaDataTransaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomSettingTransactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>