force-app/main/default/objects/acn_ttn__CustomMetaDataTransaction__c/fields/acn_ttn__BatchCompleted__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__BatchCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BatchCompleted</label>
    <type>Checkbox</type>
</CustomField>