force-app/main/default/objects/acn_ttn__CustomMetaDataTransaction__c/fields/acn_ttn__freeableInKB__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__freeableInKB__c</fullName>
    <label>freeableInKB</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>