force-app/main/default/objects/acn_ttn__CustomMetaDataTransaction__c/fields/acn_ttn__Processing_Stage__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Processing_Stage__c</fullName>
    <label>Processing Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Metadata Analysis Started</fullName>
            </value>
            <value>
                <fullName>Custom Metadata Analysis Report Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>